fix achitecture requirement